[package]
name = "squelch"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "play-file"
path = "src/play-file.rs"

[dependencies]
bincode = "2.0"
biquad = "0.5.0"
clap = { version = "4.5.48", features = ["derive"] }
cpal = "0.16"
eframe = "0.32"
global-hotkey = "0.7.0"
hound = "3.5"
lowpass-filter = "0.4.1"
minimp3 = "0.5"
noise = "0.9.0"
